--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,13 @@
 
 # dependencies
 /node_modules
+/client/node_modules
 
 # testing
 /coverage
 
 # production
-/build
+/client/build
 
 # misc
 .DS_Store
@@ -15,6 +16,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
