--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000/",
   "dependencies": {
     "express": "^4.16.3",
+    "html-react-parser": "^0.4.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
