--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+node_modules/
 /node_modules
 /client/node_modules
 
@@ -8,7 +9,7 @@
 /coverage
 
 # production
-/client/build
+#/client/build
 
 # misc
 .DS_Store
