--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
+    "build": "npm build",
     "dev": "concurrently --kill-others-on-fail \"npm run-script server\" \"npm run-script client\""
   },
   "dependencies": {
