--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "2.0.4"
   },
   "start": "node server.js",
-  "heroku-postbuild": "cd client && npm install & npm install --only=dev --no-shrinkwrap && npm run build",
+  "build": "npm run build",
+  "heroku-postbuild": "cd client && npm install && npm run build",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
