--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "concurrently --kill-others-on-fail \"npm run-script server\" \"npm run-script client\"",
 //    "start": "node index.js",
 //    "heroku-postbuild": "cd client && yarn && yarn run build"
-    "start": "node server.js",
-    "heroku-postbuild": "npm run-script start && cd client && npm install && npm run build",
+//    "start": "node server.js",
+//    "heroku-postbuild": "npm run-script start && cd client && npm install && npm run build",
   },
   "dependencies": {
     "body-parser": "^1.18.3",
