--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run-script server\" \"npm run-script client\"",
-//    "start": "node index.js",
-//    "heroku-postbuild": "cd client && yarn && yarn run build"
-//    "start": "node server.js",
-//    "heroku-postbuild": "npm run-script start && cd client && npm install && npm run build",
+    "dev": "concurrently --kill-others-on-fail \"npm run-script server\" \"npm run-script client\""
   },
   "dependencies": {
     "body-parser": "^1.18.3",
